pyinterp/pyinterp/pyinterp/tests/must_pass/math/errors/acos_domain2.py
print(math.acos(2.0))